# YumeChat

./: .gitignore  CMakeLists.txt  Message.pb.cc  Message.pb.h  Message.proto  Resource.qrc  framelessmainwindow.cpp  framelessmainwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  yumewindow.cpp  yumewindow.h
Resource/: ico.aps
src/logic/DatabaseMgr/: DatabaseMgr.cpp  DatabaseMgr.h
src/logic/Global/: global.cpp  global.h
src/logic/HttpMgr/: HttpMgr.cpp  HttpMgr.h
src/logic/MessageMgr/: MessageMgr.cpp  MessageMgr.h
src/logic/TcpMgr/: TcpMgr.cpp  TcpMgr.h
src/ui/Add/: SelectWindow.cpp  SelectWindow.h  VerifyMessageWidget.cpp  VerifyMessageWidget.h  VerifyMessageWindow.cpp  VerifyMessageWindow.h
src/ui/Custom/: CircleAvatar.cpp  CircleAvatar.h  SmoothListWidget.cpp  SmoothListWidget.h  SmoothScrollBar.cpp  SmoothScrollBar.h  SplitButton.cpp  SplitButton.h  UnScrollTextEdit.cpp  UnScrollTextEdit.h  YumeBubble.cpp  YumeBubble.h  YumeButton.cpp  YumeButton.h  YumeLabel.cpp  YumeLabel.h  YumeLineEdit.cpp  YumeLineEdit.h  YumeMenu.cpp  YumeMenu.h  YumeTitleBar.cpp  YumeTitleBar.h
src/ui/Register/: registerdialog.cpp  registerdialog.h  registerdialog.ui  yume_ui_reg.h
src/ui/Widgets/: ChatArea.cpp  ChatArea.h  ChatInput.cpp  ChatInput.h  ChatTop.cpp  ChatTop.h  ConversationWidget.cpp  ConversationWidget.h  FriendList.cpp  FriendList.h  FriendPage.cpp  FriendPage.h  FriendWidget.cpp  FriendWidget.h  MessageItem.cpp  MessageItem.h  MessagePage.cpp  MessagePage.h  SearchFriendWidget.cpp  SearchFriendWidget.h  SearchWidget.cpp  SearchWidget.h  messagelist.cpp  messagelist.h  messagewidget.cpp  messagewidget.h  toolwidget.cpp  toolwidget.h
src/ui/login/: login_dialog.cpp  login_dialog.h  login_dialog.ui
temple/Singleton/: Singleton.cpp  Singleton.h
